更新环境文档